# RubiksCube

./: CMakeLists.txt  Main.qml  MainView.qml  main.cpp
assets/: FullCube.qml
assets/meshes/: cube.mesh
c++/: clickableentity.cpp  clickableentity.h  cubecreator.cpp  cubecreator.h  customqmlengine.cpp  customqmlengine.h  mytestclass.cpp  mytestclass.h
comps/: Cube.qml  SOrbitCameraController.qml  StyledButton.qml
controls/: ControlsView.qml  CubeControls.qml  OrientationGrid.qml
logic/: logic.js
views/: CreateCubeView.qml  CubeView.qml  GameMenu.qml
